# sistema_gestao_tarefas

./: .gitignore  Procfile  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
accounts/: apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_passwordresetcode_email_and_more.py  0003_passwordresetcode_status.py  0004_alter_passwordresetcode_status.py  0005_alter_passwordresetcode_status.py  0006_passwordresetcode_code_hash.py  0007_alter_passwordresetcode_code_hash.py
assets/css/: style.css
core/: __init__.py  celery.py  settings.py  urls.py
tasks/: apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_user.py  0003_alter_task_options.py  0004_rename_task_task_title_task_desc_task_notify_date_and_more.py  0005_rename_desc_task_description.py  0006_task_uid.py  0007_alter_task_uid.py
templates/bases/: base.html  task.html
templates/erros/: 404.html
templates/partials/: msg.html  nav.html  task_cards.html
templates/registration/: forgot_password.html  login.html  logout.html  reset_password.html  signup.html  verify_code.html
templates/tasks/: task_create.html  task_detail.html  task_list.html
