[tool.poetry]
name = "sistema-gestao-tarefas"
version = "0.1.0"
description = ""
authors = ["angelo-francisco <ics20080729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
taskipy = "^1.14.1"
django-livereload = "^1.7"
crispy-bootstrap5 = "^2024.10"
django-crispy-forms = "^2.3"
flower = "^2.0.1"
pytz = "^2024.2"
celery = "^5.4.0"


[tool.taskipy.tasks]
run = 'python manage.py makemigrations && python manage.py migrate && python manage.py runserver'
mkmg = 'python manage.py makemigrations'
mg = 'python manage.py migrate'
app = 'python manage.py startapp'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
