[tool.poetry]
name = "sistema-gestao-tarefas-venv2"
version = "0.1.0"
description = ""
authors = ["angelo-francisco <ics20080729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
taskipy = "^1.14.1"
crispy-bootstrap5 = "^2024.10"
django-crispy-forms = "^2.3"
celery = {extras = ["redis"], version = "^5.4.0"}
flower = "^2.0.1"
twilio = "^9.4.1"
gitignore-cli = "^1.0.4"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"
django-environ = "^0.11.2"
psycopg2 = "^2.9.10"
dj-database-url = "^2.3.0"


[tool.taskipy.tasks]
run = 'python manage.py makemigrations && python manage.py migrate && python manage.py runserver'
mkmg = 'python manage.py makemigrations'
mg = 'python manage.py migrate'
app = 'python manage.py startapp'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
